--- a/site/MS_IU School of Medicine_files/56612.css
+++ b/site/MS_IU School of Medicine_files/56612.css
@@ -18566,3 +18566,75 @@ margin-right:20px;
   0% { transform: rotate(0deg); }
   100% { transform: rotate(360deg); }
 }
+.btnSearch {
+  display: inline-block;
+  padding: 12px 15px;
+  background-color: #006298;
+  border: 1px solid #006298;
+  color: #fff;
+  font-size: 0.875rem;
+  font-family: BentonSansBold, Arial, Helvetica, sans-serif;
+  line-height: 1.2;
+  text-transform: uppercase;
+  text-decoration: none !important;
+  position: relative;
+  -webkit-transition: background-color 333ms ease-in-out;
+  -moz-transition: background-color 333ms ease-in-out;
+  -o-transition: background-color 333ms ease-in-out;
+  transition: background-color 333ms ease-in-out;
+}
+.btnSearch:hover {
+  background-color: rgba(0, 0, 0, 0.25);
+}
+
+/*checkboxes-------------------------------------*/
+.control {
+  display: block;
+  position: relative;
+  padding-left: 30px;
+  margin-bottom: 15px;
+  cursor: pointer;
+  font-size: 18px;
+}
+.control input {
+  position: absolute;
+  z-index: -1;
+  opacity: 0;
+}
+.control__indicator {
+  position: absolute;
+  top: 2px;
+  left: 0;
+  height: 20px;
+  width: 20px;
+  background: #e6e6e6;
+}
+.control:hover input ~ .control__indicator,
+.control input:focus ~ .control__indicator {
+  background: #ccc;
+}
+.control input:checked ~ .control__indicator {
+  background: #006298;
+}
+.control:hover input:not([disabled]):checked ~ .control__indicator,
+.control input:checked:focus ~ .control__indicator {
+  background: #004266;
+}
+.control__indicator:after {
+  content: '';
+  position: absolute;
+  display: none;
+}
+.control input:checked ~ .control__indicator:after {
+  display: block;
+}
+.control--checkbox .control__indicator:after {
+  left: 8px;
+  top: 4px;
+  width: 3px;
+  height: 8px;
+  border: solid #fff;
+  border-width: 0 2px 2px 0;
+  transform: rotate(45deg);
+}
+/*checkboxes-------------------------------------*/
